# Real-Time-Construction-Site-Monitoring-System

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.py
Docs/: SIH Project Report.docx  SIH-PS-1725 Idea description.docx  SIH-PS-1725 Idea summary.docx  SIH2024_IDEA_Presentation_Format.pptx
backend/: .env  cracha-exemplo.tex  cracha-retrato.aux  cracha-retrato.tex  db.sqlite3  mydatabase
backend/auth_app/: middleware.py  urls.py  utils.py  views.py
backend/backend/: settings.py  urls.py
backend/crachá_EMED/: cracha-exemplo.tex
backend/myapp/: models.py  urls.py  utils.py  views.py
backend/myapp/model/: inspector.py
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/3d-view/: page.tsx
frontend/app/contractors/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/map/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/projects/: page.tsx
frontend/app/reports/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/3d/: three-viewer.tsx
frontend/components/auth/: login-form.tsx  signup-form.tsx
frontend/components/dashboard/: project-grid.tsx  stats-cards.tsx
frontend/hooks/: use-auth.ts  use-language.ts  use-theme.ts
frontend/lib/: auth.ts  language.ts
model_integration/: app.py  requirements.txt  utils.py
model_integration/Vehicle_Building_Classifier/: pretrained.py
model_integration/ml_models/: pretrained.py
model_integration/static/: style.css
model_integration/templates/: index.html  result.html
(+15 files in other folders)
